--- a/css/main.css
+++ b/css/main.css
@@ -181,9 +181,6 @@ body {
 	display: inline-block;
 	opacity: 0;
 	-webkit-transition: opacity 0.1s 0s;
-	-moz-transition: opacity 0.1s 0s;
-	-ms-transition: opacity 0.1s 0s;
-	-o-transition: opacity 0.1s 0s;
 	transition: opacity 0.1s 0s;
 	vertical-align: top;
 	width: 16.2%;
@@ -228,9 +225,6 @@ body {
 	margin: 0;
 	max-width: 100%;
 	-webkit-transition: opacity 0.2s;
-	-moz-transition: opacity 0.2s;
-	-ms-transition: opacity 0.2s;
-	-o-transition: opacity 0.2s;
 	transition: opacity 0.2s;
 
 }
@@ -253,9 +247,6 @@ body {
 .cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu > li {
 	opacity: 1;
 	-webkit-transition: opacity 0.5s 0.1s;
-	-moz-transition: opacity 0.5s 0.1s;
-	-ms-transition: opacity 0.5s 0.1s;
-	-o-transition: opacity 0.5s 0.1s;
 	transition: opacity 0.5s 0.1s;
 }
 
@@ -274,9 +265,6 @@ body {
 
 .no-touch .cbp-hsmenubg {
 	-webkit-transition: height 0.3s;
-	-moz-transition: height 0.3s;
-	-ms-transition: height 0.3s;
-	-o-transition: height 0.3s;
 	transition: height 0.3s;
 }
 
@@ -296,6 +284,7 @@ body {
 
 .top_img:hover {
 	background-image: url(../img/top_bg.jpg);
+	-webkit-transition: background-image 2s ease-out 0.3s;
 	transition: background-image 2s ease-out 0.3s;
 }
 
@@ -318,10 +307,6 @@ body {
 .zakaz_btn {
 	background: #75b94c;
 	border-color: transparent;
-	-webkit-border-radius: 10;
-	-moz-border-radius: 10;
-	-ms-border-radius: 10;
-	-o-border-radius: 10;
 	border-radius: 10px;
 	color: #ffffff;
 	font-family: Arial;
@@ -334,6 +319,7 @@ body {
 .zakaz_btn:hover {
 	background: #599931;
 	text-decoration: none;
+	-webkit-transition: background-color .6s ease;
 	transition: background-color .6s ease;
 }
 
@@ -353,6 +339,9 @@ body {
 }
 
 .circle_wrap {
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	height: 300px;
 }
@@ -369,6 +358,7 @@ body {
 	margin: auto;
 	text-align: center;
 	text-decoration: none;
+	-webkit-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
 	width: 200px;
 }
@@ -378,6 +368,7 @@ body {
 	border: 6px double #f0ad39;
 	color: #f0ad39;
 	text-decoration: none;
+	-webkit-transform: scale(0.9);
 	transform: scale(0.9);
 }
 
@@ -407,19 +398,15 @@ body {
 }
 .incircle {
 	behavior: url(border-radius.htc); /*IE */
-	border: 3px solid #fff;
-	-webkit-border-radius: 200px; /* Safari, Chrome */
-	-moz-border-radius: 200px; /* Firefox */
-	-o-border-radius: 200px; /* Safari, Chrome */
+	border: 3px solid #fff; /* Safari, Chrome */ /* Firefox */ /* Safari, Chrome */
 	border-radius: 200px;
 	cursor: pointer;
 	padding: 20px;
 	-webkit-transition: all 0.3s ease-out;
-	-moz-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
 }
 .incircle:hover {
+	-webkit-transform: scale(0.9);
 	transform: scale(0.9);
 }
 .moveone {
@@ -427,6 +414,7 @@ body {
 	margin-bottom:  20px;
 	position: relative;
 	top: 0;
+	-webkit-transition: all .6s ease-in-out;
 	transition: all .6s ease-in-out;
 }
 .moveone:hover {
@@ -436,8 +424,6 @@ body {
 
 .box_blue {
 	background:  #385aa6;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
 	border-radius: 12px 12px 0 0;
 	padding: 30px;
 	text-align: center;
@@ -614,8 +600,6 @@ body {
 }
 .boxend_blue {
 	background: #385aa6;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
 	border-radius: 0 0  12px 12px ;
 	margin: 0 0 50px 0;
 	padding: 30px;
