--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,14 @@
 body {
-	background-color: #e6e7e8;
+	background-color: #e5e5e5;
 	font-family: "RobotoRegular", sans-serif;
 	font-size: 14pt;
 }
 
 .top_header {
-	background-color: #d0d0d0;
 }
 
 .header_topline {
-	background-color: #e8e8e8;
+	background-color: #e5e5e5;
 	color: #676767;
 	font-size: 12pt;
 	padding: 8px 0;
@@ -632,6 +631,48 @@ hr {
 	font-style: italic;
 }
 #footer {
-	margin-top: 40px;
+	margin-top: 60px;
 	background-color: #a41734;
+	font-family: "RobotoLight", sans-serif;
+	font-style: normal;
+	font-size: 16px;
+	color: #e5e5e5;
+	padding: 30px 0 50px 0;
+}
+.coment {
+	font-family: "RobotoLight", sans-serif;
+	font-style: italic;
+	font-size: 16px;
+	color: #e5e5e5;
+	text-align: justify;
+}
+.footer_mn {
+	padding: 0;
+}
+
+
+.footer_mn >ul {
+	list-style: none;
+	padding: 0;
+	margin-left: 15px;
+}
+.footer_mn >ul>li {
+	display: inline-block;
+	position: relative;
+}
+.footer_mn >ul>li> a {
+	color: #e5e5e5;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+	line-height: 1;
+	margin-right: 1em;
+	text-decoration: none;
+
+}
+.footer_mn>ul>li>a:hover,
+.footer_mn>ul>li>a:focus {
+	text-decoration: underline;
+	color: #ffde86;
+
 }
