--- a/css/main.css
+++ b/css/main.css
@@ -46,69 +46,51 @@ body {
 }
 
 
-/* Main menu wrapper */
+/* ----------Main menu wrapper------- */
 
 .cbp-hsmenu-wrapper {
 	position: relative;
 }
-
-
 /* Common style for all lists */
-
 .cbp-hsmenu-wrapper ul {
 	list-style: none;
 	margin: 0 auto;
 	padding: 0;
 }
-
-
 /* 100% width bar for menu */
-
 .cbp-hsinner {
 	background: #385aa6;
 	position: relative;
-	z-index: 100;
+	z-index: 50;
 }
-
-
 /* Main menu style */
-
 .cbp-hsmenu-wrapper .cbp-hsmenu {
 	margin: 0 auto;
 	max-width: 64em;
 	padding: 0 2em;
 }
-
 .cbp-hsmenu > li {
 	display: inline-block;
 	margin-left: 4em;
 }
-
 .cbp-hsmenu > li:first-child {
 	margin-left: 0;
 }
-
-
 /* Main menu link style */
-
 .cbp-hsmenu > li > a {
 	color: #fff;
 	display: inline-block;
 	font-size: 1.2em;
-	line-height: 3em;
+	line-height: 3.5em;
 	position: relative;
 	z-index: 10000;
 }
-
 .no-touch .cbp-hsmenu > li > a:hover,
 .no-touch .cbp-hsmenu > li > a:focus,
 .cbp-hsmenu > li.cbp-hsitem-open > a {
 	color: #fbfce4;
 }
-
-
 /* Add an arrow to the main menu link if it has a submenu (not the only child) */
-
 .cbp-hsmenu > li > a:not(:only-child):before {
 	content: "\f107";
 	display: inline-block;
@@ -124,16 +106,11 @@ body {
 	speak: none;
 	text-transform: none;
 	vertical-align: middle;
-
 }
-
 .cbp-hsmenu > li.cbp-hsitem-open > a:not(:only-child):before {
 	content: "\f106";
 }
-
-
 /* Add a triangle to currently open menu item link */
-
 .cbp-hsmenu > li.cbp-hsitem-open > a:after {
 	border: solid transparent;
 	border-color: transparent;
@@ -149,9 +126,7 @@ body {
 	width: 0;
 }
 
-
 /* Submenu style */
-
 .cbp-hssubmenu {
 	left: 0;
 	position: absolute;
@@ -161,20 +136,15 @@ body {
 	width: 100%;
 	z-index: 0;
 }
-
 .cbp-hssubmenu:before,
 .cbp-hssubmenu:after {
 	content: " ";
 	display: table;
 }
-
 .cbp-hssubmenu:after {
 	clear: both;
 }
-
-
 /* Let's allow 6 item in a row */
-
 .cbp-hssubmenu > li {
 	box-shadow: -28px 0 0 -27px #ddd, 0 -28px 0 -27px #ddd;
 	display: inline-block;
@@ -185,35 +155,24 @@ body {
 	vertical-align: top;
 	width: 16.2%;
 }
-
-
 /* First 6 items don't have upper box shadow */
-
 .cbp-hssubmenu > li:nth-child(-n+6) {
 	box-shadow: -28px 0 0 -27px #ddd;
 }
-
-
 /* Every 7th item does not have a left box shadow */
-
 .cbp-hssubmenu > li:nth-child(6n+1) {
 	box-shadow: 0 -28px 0 -27px #ddd;
 }
-
-
 /* The first one does not have any box shadow */
-
 .cbp-hssubmenu > li:first-child {
 	box-shadow: none;
 }
-
 .cbp-hssubmenu > li a {
 	color: #a2a2a2;
 	display: block;
 	padding: 2em 1em 1em 1em;
 	text-align: center;
 }
-
 .no-touch .cbp-hssubmenu > li a:hover,
 .no-touch .cbp-hssubmenu > li a:focus {
 	color: #e8e8e8;
@@ -227,31 +186,24 @@ body {
 	-webkit-transition: opacity 0.2s;
 	transition: opacity 0.2s;
 }
-
 .no-touch .cbp-hssubmenu > li a:hover img {
 	opacity: 0.5;
 }
-
 .cbp-hssubmenu > li a span {
 	display: block;
 	margin-top: 0.4em;
 	min-height: 3em;
 }
-
 .cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu {
 	visibility: visible;
 	z-index: 1000;
 }
-
 .cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu > li {
 	opacity: 1;
 	-webkit-transition: opacity 0.5s 0.1s;
 	transition: opacity 0.5s 0.1s;
 }
-
-
 /* Helper div for animating the background */
-
 .cbp-hsmenubg {
 	background: #f7f7f7;
 	height: 0;
@@ -261,18 +213,114 @@ body {
 	width: 100%;
 	z-index: 20;
 }
-
 .no-touch .cbp-hsmenubg {
 	-webkit-transition: height 0.3s;
 	transition: height 0.3s;
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  min-height: 480px;    /* Set slide height here */
+min-height: 650px;    /* Set slide height here */
 width: 100% !important;
 }
 
-/* Top IMG*/
+
+
+/* ============================= left navigation bar============================= */
+.leftnavbar {
+    position:fixed;
+    float:left;
+    z-index:50;
+    top:20%;
+    }
+#navigationMenu {
+    padding: 0;
+    display: none;
+}
+
+#navigationMenu li{
+    list-style:none;
+    height:117px;
+    padding:1px;
+    width:65px;}
+
+#navigationMenu span{
+	/* Container properties */
+	width: 0px;
+	left: 64px;
+	padding: 0;
+	position: absolute;
+	overflow: hidden;
+
+	/* Text properties */
+	font-family: 'Myriad Pro',Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	letter-spacing: 0.6px;
+	white-space: nowrap;
+	line-height: 117px;
+
+	/* CSS3 Transition: */
+	-webkit-transition: 0.25s;
+	-moz-transition: 0.25s;
+	transition: 0.25s;
+}
+
+#navigationMenu a{	background:url('../img/navigation.jpg') no-repeat;height:117px; width:65px; display:block;	position:relative;}
+
+/* General hover styles */
+
+#navigationMenu a:hover span{ width:auto; height:117px; padding:0 60px; overflow:visible; }
+#navigationMenu a:hover{
+	text-decoration:none;
+}
+
+/* 1 Button */
+
+#navigationMenu .cabinet {	background-position:0 0;}
+#navigationMenu .cabinet:hover {	background-position:0 -117px;}
+#navigationMenu .cabinet span{
+	background-color:#0057e3;
+	color:#ffffff;
+}
+
+/* 2 Button */
+
+#navigationMenu .online_zakaz { background-position:-65px 0;}
+#navigationMenu .online_zakaz:hover { background-position:-65px -117px;}
+#navigationMenu .online_zakaz span{
+	background-color:#353535;
+	color:#ffffff;
+}
+
+/* 3 Button */
+
+#navigationMenu .hronomer { background-position:-130px 0;}
+#navigationMenu .hronomer:hover { background-position:-130px -117px;}
+#navigationMenu .hronomer span{
+	background-color:#62b05a;
+	color:#ffffff;
+}
+
+/* 4 Button */
+
+#navigationMenu .pagemeter { background-position:-195px 0;}
+#navigationMenu .pagemeter:hover{ background-position:-195px -117px;}
+#navigationMenu .pagemeter span{
+	background-color:#d66c6c;
+	color:#ffffff;
+}
+
+/* 5 Button */
+
+#navigationMenu .contact { background-position:-260px 0;}
+#navigationMenu .contact:hover { background-position:-260px -117px;}
+#navigationMenu .contact span{
+	background-color:#fae15c;
+	color:#353535;
+}
+/* ------------- end --------------------------- */
+
+/* Top IMG
 .top_img {
 	background-color: #385aa6;
 	background-image: url(../img/top_bg_blur.jpg);
@@ -288,13 +336,15 @@ width: 100% !important;
 	background-image: url(../img/top_bg.jpg);
 	-webkit-transition: background-image 2s ease-out 0.3s;
 	transition: background-image 2s ease-out 0.3s;
+}*/
+.container-fluid {
+    padding: 0;
 }
 
-.top_img>p {
+.carousel-caption>p {
 	color: #ffffff;
 	font-family: "RobotoLight", sans-serif;
 	font-size: 36px;
-	padding: 80px 0 0 0;
 }
 
 .center_btn {
@@ -304,6 +354,7 @@ width: 100% !important;
 	position: relative;
 	right: 0;
 	top: 15%;
+    padding: 40px;
 }
 
 .zakaz_btn {
@@ -421,9 +472,12 @@ width: 100% !important;
 }
 .moveone:hover {
 	top: 20px;
+}
+.moveone>div>a {
+    text-decoration: none;
+    color: #fefefe;
 
 }
-
 .box_blue {
 	background:  #385aa6;
 	border-radius: 12px 12px 0 0;
@@ -620,7 +674,7 @@ width: 100% !important;
     border-radius: 100px; /* Радиус скругления */
     box-shadow: 0 0 4px #666; /* Параметры тени */
 	margin-left: 50px;
-	margin-top: 40px;
+	margin-top: 10px;
 
    }
 hr {
