--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,15 @@ body {
 	font-family: "RobotoRegular", sans-serif;
 	font-size: 14pt;
 }
+body input:focus:required:invalid,
+body textarea:focus:required:invalid {
+    border: red 2px solid
+}
+
+body input:required:valid,
+body textarea:required:valid {
+    border: green 2px solid
+}
 
 .top_header {
 }
@@ -217,13 +226,6 @@ body {
 	-webkit-transition: height 0.3s;
 	transition: height 0.3s;
 }
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
-min-height: 650px;    /* Set slide height here */
-width: 100% !important;
-}
-
-
 
 /* ============================= left navigation bar============================= */
 .leftnavbar {
@@ -337,6 +339,13 @@ width: 100% !important;
 	-webkit-transition: background-image 2s ease-out 0.3s;
 	transition: background-image 2s ease-out 0.3s;
 }*/
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+min-height: 200px;    /* Set slide height here */
+width: 100% !important;
+}
+
 .container-fluid {
     padding: 0;
 }
@@ -345,6 +354,7 @@ width: 100% !important;
 	color: #ffffff;
 	font-family: "RobotoLight", sans-serif;
 	font-size: 36px;
+
 }
 
 .center_btn {
@@ -375,6 +385,7 @@ width: 100% !important;
 	-webkit-transition: background-color .6s ease;
 	transition: background-color .6s ease;
 }
+
 
 .about {
 	margin-top: 40px;
@@ -454,7 +465,7 @@ width: 100% !important;
 	border: 3px solid #fff; /* Safari, Chrome */ /* Firefox */ /* Safari, Chrome */
 	border-radius: 200px;
 	cursor: pointer;
-	padding: 20px;
+	padding: 10px;
 	-webkit-transition: all 0.3s ease-out;
 	transition: all 0.3s ease-out;
 }
@@ -657,19 +668,20 @@ width: 100% !important;
 .boxend_blue {
 	background: #385aa6;
 	border-radius: 0 0  12px 12px ;
-	margin: 0 0 50px 0;
-	padding: 30px;
+	margin: 0 0 40px 0;
+	padding: 20px;
 	position: relative;
 	text-align: center;
 	z-index: 8;
 }
+
 .liners {
 	background-color: #adadad;
 	margin-top: 20px;
 	width: 100%;
 }
 
- .round {
+.round {
 	border: 0; /* Параметры рамки */
     border-radius: 100px; /* Радиус скругления */
     box-shadow: 0 0 4px #666; /* Параметры тени */
@@ -680,7 +692,7 @@ width: 100% !important;
 hr {
 	background-color: #cecece;
 	border: 0;
-	height: 2px;
+	height: 1px;
 	margin: 10px 0;
 }
 .feedback {
@@ -689,7 +701,7 @@ hr {
 }
 #footer {
 	margin-top: 60px;
-	background-color: #a41734;
+	background-color: #333333;
 	font-family: "RobotoLight", sans-serif;
 	font-style: normal;
 	font-size: 16px;
@@ -730,6 +742,49 @@ hr {
 .footer_mn>ul>li>a:hover,
 .footer_mn>ul>li>a:focus {
 	text-decoration: underline;
-	color: #ffde86;
+	color: #fff3d5;
 
 }
+.callz {
+   padding-top: 10px;
+}
+.callzakaz {
+	background: #e5e5e5;
+	border-color: transparent;
+	border-radius: 6px;
+	color: #333;
+	font-family: Arial;
+	font-size: 16px;
+	padding: 10px 20px 10px 20px;
+	text-decoration: none;
+    margin-top: 10px;
+}
+.callzakaz:hover {
+	background: #afafaf;
+	text-decoration: none;
+	-webkit-transition: background-color .6s ease;
+	transition: background-color .6s ease;
+}
+.hidden {
+    display: none;
+}
+.pop_form input [type=text] {
+    display: block;
+    line-height: 24px;
+    width: 90%;
+    border: #999 1px solid;
+}
+.pop_form input {
+    margin: 5px 5px ;
+}
+.pop_form button {
+    margin: 5px;
+}
+.pop_form h4 {
+    margin: 10px auto 15px;
+    text-align: center;
+    font-weight: normal;
+    font-family: "RobotoBold";
+    text-transform: uppercase;
+}
+
