--- a/libs/bootstrap/bootstrap.css
+++ b/libs/bootstrap/bootstrap.css
@@ -1016,7 +1016,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "RobotoRegular", sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -1037,7 +1037,7 @@ a {
 a:hover,
 a:focus {
   color: #23527c;
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
