--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ p {
     display: inline-block;
     font-size: 14pt;
     font-family: "RobotoRegular", sans-serif;
-    line-height: 2.8em;
+    line-height: 3em;
     position: relative;
     z-index: 10000;
 }
@@ -1246,6 +1246,16 @@ hr {
 
 /*-----------------------hidden table end------------------------ */
 
+tbody span {
+    margin-right: 5px;
+    font-size: 14pt;
+    cursor: pointer;
+}
+tbody span:visited {
+    color: aquamarine;
+}
+
+/* ------------- player_end --------------------------- */
 .leftbar {
     padding: 0 10px;
     text-align: right;
@@ -1296,7 +1306,7 @@ hr {
 
 .rightbar {
     text-align: left;
-    padding: 15px;
+    padding: 0 15px 30px 15px;
 }
 .rightbar>.basictext {
     margin-bottom: 0;
@@ -1306,7 +1316,7 @@ hr {
     margin-left: 10px;
 }
 #choose >ul>li {
-    font-size: 11pt;
+    font-size: 12pt;
 }
 #choose >ul {
     margin: 0;
