--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,6 @@ body textarea:required:valid {
     border: green 2px solid;
 }
 
-h2 {
-    padding-left: 20px;
-}
 p {
     font-family: 'RobotoLight', sans-serif;
 }
@@ -658,8 +655,12 @@ p {
 .serij h3 {
     color: #fff;
     font-family: "RobotoLight", sans-serif;
+    padding: 10px 0;
 }
-
+.rightbar>h2 {
+    padding: 15px 0 0 0;
+    margin: 0;
+}
 
 .link1 {
     font-size: 10pt;
@@ -674,16 +675,16 @@ p {
 }
 
 .palitra {
+    padding-right: 10px;
     display: block;
     float: right;
-    padding-right: 10px;
 }
 
 .basictext {
     color: #404040;
     font-family: "RobotoLight", sans-serif;
     font-size: 12pt;
-    padding: 15px 10px;
+    padding: 26px 10px;
     text-align: justify;
 
 }
@@ -1319,3 +1320,15 @@ hr {
     margin: 0;
 }
 
+.players {
+   tab-size: 50px;
+}
+.left_img {
+    margin: 10px;
+    float: left;
+
+}
+.inside {
+    padding: 20px 20px 0 20px;
+    margin-top: 20px;
+}
