--- a/css/main.css
+++ b/css/main.css
@@ -690,7 +690,10 @@ p {
 
 }
 .basictext:first-letter { margin-left: 40px; }
+.nospace {
+    margin: 12px 0 2px 0;
 
+}
 .righttext {
     float:left;
     margin-top:10px;
@@ -698,6 +701,21 @@ p {
     text-indent: 40px;
     padding-right:10px;
 }
+.littext {
+    text-align:justify;
+    font-family: "RobotoLight", sans-serif;
+    font-size: 14px;
+    margin: 0;
+}
+.cursive {
+    font-family: "RobotoLightItalic", sans-serif;
+    font-size: 14px;
+    padding: 0;
+    border-bottom: 1px solid #d0d0d0;
+
+}
+
+
 .circle_wrap {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1186,7 +1204,9 @@ hr {
     cursor: pointer;
 }
 /*=====================table==========================*/
-
+.table-responsive {
+    margin-top: 50px;
+}
 
 .features-table {
   width: 100%;
@@ -1225,6 +1245,7 @@ hr {
 	background: rgba(144,144,144,0.15);
 	border-right: 1px solid white;
 	text-align: center;
+    padding: 5px 5px;
 }
 .features-table td .white {
     cursor:pointer;
@@ -1387,3 +1408,55 @@ hr {
     border: 1px dashed grey;
     border-radius: 8px;
 }
+/*  Скопируйте код ниже в ваш файл стилей (CSS файл)  */
+
+#search-block-form{
+	width:248px;
+	height:28px;
+	border-radius:6px;
+	border:#c9c9c9 solid 1px;
+	background:url('../images/searchBg.png') left top repeat-x;
+    margin: 20px;
+	}
+.focus-active{
+	border-color:#aaa !important;
+	background:#fff !important;
+	}
+#search-block-form input{
+	padding:0;
+	margin:0;
+	display:block;
+	border:none;
+	outline:none;
+	background:none;
+	width:100%;
+	height:100%;
+	}
+#search-block-form .form-actions{
+	width:28px;
+	height:28px;
+	float:left;
+	background:url('../images/searchIcon.png') 5px 2px no-repeat;
+	}
+#search-block-form .form-actions input:hover{
+	cursor:pointer;
+	}
+#search-block-form .form-actions input{
+	overflow:hidden;
+	text-indent:-9999px;
+	}
+#search-block-form .form-item{
+	width:210px;
+	padding:0px 5px;
+	float:right;
+	height:28px;
+	}
+#search-block-form .form-item input{
+	font:13px/16px "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color:#222;
+	height:auto !important;
+	padding:6px 0;
+	}
+.placeholder{color:#cbcbcb !important;}
+
+/* Конец */
