--- a/libs/bootstrap/bootstrap.css
+++ b/libs/bootstrap/bootstrap.css
@@ -5003,6 +5003,7 @@ a.badge:focus {
 .thumbnail {
   display: block;
   padding: 4px;
+  height: 350px;
   margin-bottom: 20px;
   line-height: 1.42857143;
   background-color: #fff;
